# async-timer

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml  build.rs
.github/workflows/: rust.yml
src/: delay.rs  interval.rs  lib.rs  state.rs  timed.rs  utils.rs
src/c_wrapper/: posix.c
src/oneshot/: apple.rs  dummy.rs  extra.rs  kqueue.rs  mod.rs  posix.rs  state.rs  timer_fd.rs  web.rs  win.rs
src/provider/: apple.rs  dummy.rs  mod.rs  posix.rs  timer_fd.rs  web.rs  win.rs
src/timer/: apple.rs  async_tokio03.rs  async_tokio1.rs  dummy.rs  kqueue.rs  mod.rs  posix.rs  timer_fd.rs  web.rs  win.rs
tests/: delay.rs  interval.rs  oneshot.rs  timed.rs  timer.rs
