[package]
name = "async-timer"
version = "0.7.3"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Timers for Rust async story"
readme = "README.md"
repository = "https://github.com/DoumanAsh/async-timer"
license = "BSL-1.0"
keywords = ["timer", "async", "wasm"]
categories = ["asynchronous", "wasm", "no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[features]
default = []
# Requires alloc
no_std = []
# Enables usage of tokio
tokio_on = ["mio", "tokio", "nix"]
# Enables Stream implementation
stream = ["futures-core"]

[dependencies.futures-core]
version = "0.3"
optional = true
default-features = true

[target.'cfg(any(target_os = "macos", target_os = "ios", unix))'.dependencies]
libc = { version = "0.2.60", default-features = false }
mio = { version = "0.6", optional = true }
tokio = { version = "0.2", default-features = false, optional = true, features = ["io-driver"] }

#kqueue needs nix
[target.'cfg(any(target_os = "bitrig", target_os = "dragonfly", target_os = "freebsd", target_os = "ios", target_os = "macos", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
nix = { version = "0.17", optional = true }

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["threadpoolapiset"]

[dev-dependencies]
futures-util = "0.3.0"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
