[package]
name = "async-timer"
version = "1.0.0-beta.4"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Timers for Rust async story"
readme = "README.md"
repository = "https://github.com/DoumanAsh/async-timer"
license = "BSL-1.0"
keywords = ["timer", "async", "wasm"]
categories = ["asynchronous", "wasm", "no-std"]
include = [
    "**/*.rs",
    "**/*.c",
    "Cargo.toml",
    "README.md"
]

[features]
default = []
# Enables std usage for traits
std = []
# Enables C API wrapper for platform code.
c_wrapper = ["cc"]
# Enables usage of tokio 0.2
tokio02 = ["mio", "tokio", "nix", "std"]
# Enables Stream implementation
stream = ["futures-core"]

[dependencies]
error-code = "2"

[dependencies.futures-core]
version = "0.3"
optional = true
default-features = true

# posix only
[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios"))))'.dependencies]
os-sync = "0.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["threadpoolapiset"]

[target.'cfg(any(target_os = "macos", target_os = "ios", unix))'.dependencies]
libc = { version = "0.2.60", default-features = false }
mio = { version = "0.6", optional = true }
tokio = { version = "0.2", default-features = false, optional = true, features = ["io-driver"] }

#kqueue needs nix
[target.'cfg(any(target_os = "bitrig", target_os = "dragonfly", target_os = "freebsd", target_os = "ios", target_os = "macos", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
nix = { version = "0.17", optional = true }

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
futures-util = "0.3.0"
tokio = { version = "0.2", features = ["macros", "rt-core"] }

[build-dependencies.cc]
version = "1"
optional = true
