[package]
name = "async-timer"
version = "1.0.0-beta.8"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Timers for Rust async story"
readme = "README.md"
repository = "https://github.com/DoumanAsh/async-timer"
license = "BSL-1.0"
keywords = ["timer", "async", "wasm"]
categories = ["asynchronous", "wasm", "no-std"]
include = [
    "**/*.rs",
    "**/*.c",
    "Cargo.toml",
    "README.md"
]

[features]
default = []
# Enables std usage
std = ["error-code/std"]
# Enables C API wrapper for platform code.
c_wrapper = ["cc"]
# Enables usage of tokio 1.0
tokio1 = ["tokio_1", "nix", "std"]
# Enables Stream implementation
stream = ["futures-core"]

[dependencies]
error-code = "2.2"

[dependencies.futures-core]
version = "0.3"
optional = true
default-features = true

[target.'cfg(any(target_os = "macos", target_os = "ios", windows, unix))'.dependencies]
libc = { version = "0.2.60", default-features = false }
tokio_1 = { package = "tokio", version = "1.15", default-features = false, optional = true, features = ["net"] }

#kqueue needs nix
[target.'cfg(any(target_os = "bitrig", target_os = "dragonfly", target_os = "freebsd", target_os = "ios", target_os = "macos", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
nix = { version = "0.23", optional = true }

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
tokio_1 = { package = "tokio", version = "1.15", default-features = false, features = ["macros", "rt"] }

[build-dependencies.cc]
version = "1"
optional = true
